tests/kotlin/lex15.kt
// error: class declarations not supported in k0
class Point(val x: Int, val y: Int)

fun main() {
    val p: Point = Point(1, 2);
}